github action triggered by main branch push changes

--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -1,6 +1,9 @@
-name: Run Unit Test via Pytest
+name: Run Unit Test via Pytest (Poetry)
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   build:
