--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -31,7 +31,7 @@ jobs:
         run: pip install poetry
       - name: Install dependencies
         run: |  
-          python -m pip install --upgrade pip  
+          python -m pip install --upgrade pip pandas 
           poetry install --with dev
       - name: Lint with Ruff
         run: |  
