--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 pyspark = "3.5.0"
+pandas = "^2.2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "7.4.4"
