--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.11"
 pyspark = "3.5.0"
 pandas = "^2.2.0"
+pyarrow = "^15.0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "7.4.4"
